# DAC

./: Dockerfile  Pipfile  README.md  alembic.ini  pyproject.toml  requirements.txt
app/: main.py
app/controllers/controller/: acl_cont.py  check_permission.py  controller.py  endpoints.py  groups_cont.py  methods_cont.py  permission_cont.py  schemas.py  service_cont.py  token_controller.py  user_group_cont.py
app/controllers/schemas/: response_schema.py  schemas.py
app/data/: models.py
app/services/: jwt_service.py  permission_service.py
app/settings/: devsettings.py  prodsettings.py  settings.py
app/utils/: acl.py  autoreg.py  helpers.py  log_helper.py  migration_setup.py
core/: dbsetup.py  extensions.py  factories.py
core/settings/: devsettings.py  prodsettings.py  settings.py
migrations/: env.py
migrations/versions/: 0c2cca0c918b_.py  16d76f71f963_.py  5d6bcb659af7_add4.py  61a914592175_.py  64f830ba2296_add3.py  916c806e3c88_.py  a9cd7ffa44a1_.py  ba7be3d0f054_unique_test_endpoint_model.py  d973559d0863_.py  df738f28e3df_.py  e960ee62a77d_add_service_id_to_permissions.py  ed30dc300261_entity_enum_type.py  ee703031f551_init.py  f4a0bfaf5fc7_service_model_name_field_unique_true.py
